Update kAccessibilityFocusFallsbackToWidgetKey

- Update kAccessibilityFocusFallsbackToWidgetKey depending on whether
  ChromeVox or TalkBack is used for the window.
- This CL fixes the logic to update window properties. AxTree can arrive
  to the helper bridge after a window is activated. This CL adds a logic
  to fix it.

      confirm that it works.

Bug: 866793
Test: Navigate Android window with TalkBack by using keyboard and
Change-Id: I911c77229c9a6f338fcdadd81ea5642aaefae084
Reviewed-on: https://chromium-review.googlesource.com/1148099
Reviewed-by: David Tseng <dtseng@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578521}
Former-commit-id: fb4ffc9abbfd2f37a44aed12d631bf254754a436